// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a quiz properly 1`] = `
<div>
  <div
    class="disabled"
  >
    <p>
      Time remaining: 
      8 : 0 :  0
       
      <br />
      Current score: 
      0
       pts 
      0
      /
      11
       question(s) correct
    </p>
    <div>
      <ul
        class="questions"
      >
        <li
          class="current
              unanswered"
          tabindex="0"
        >
          1
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          2
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          3
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          4
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          5
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          6
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          7
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          8
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          9
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          10
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          11
        </li>
      </ul>
      <div
        class="nextPrevQs"
      >
        <button
          disabled=""
        >
          &lt; Previous Question
        </button>
        <button
          disabled=""
        >
          Next Question &gt;
        </button>
      </div>
      <button
        class="startQuiz"
      >
        Start Quiz
      </button>
      
    </div>
  </div>
</div>
`;

exports[`renders a started quiz properly 1`] = `
<div>
  <div
    class="quiz"
  >
    <p>
      Time remaining: 
      8 : 0 :  0
       
      <br />
      Current score: 
      0
       pts 
      0
      /
      11
       question(s) correct
    </p>
    <div>
      <ul
        class="questions"
      >
        <li
          class="current
              unanswered"
          tabindex="0"
        >
          1
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          2
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          3
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          4
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          5
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          6
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          7
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          8
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          9
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          10
        </li>
        <li
          class="
              unanswered"
          tabindex="0"
        >
          11
        </li>
      </ul>
      <div
        class="nextPrevQs"
      >
        <button>
          &lt; Previous Question
        </button>
        <button>
          Next Question &gt;
        </button>
      </div>
      <div
        class="question"
      >
        <span
          class="prompt"
        >
          For 
          4
           point(s), 
          in what state will you find...
        </span>
        <button>
          Reveal Another Clue
        </button>
        <ul
          class="clues"
        >
          <li>
            Ernest Hemingway's Grave
          </li>
          <li>
            -----------
          </li>
          <li>
            -----------
          </li>
          <li>
            -----------
          </li>
        </ul>
        <label>
          Your Answer:
          <input
            value=""
          />
        </label>
        <button>
          Submit Guess
        </button>
      </div>
      
    </div>
  </div>
</div>
`;
